Add 2v2 game mode