@@ -2,7 +2,6 @@ package org.metacorp.mindbug.model.choice;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.metacorp.mindbug.exception.GameStateException;
 import org.metacorp.mindbug.model.Game;
 import org.metacorp.mindbug.model.card.CardInstance;
 import org.metacorp.mindbug.model.effect.EffectTiming;
@@ -10,7 +9,7 @@ import org.metacorp.mindbug.model.effect.EffectsToApply;
 import org.metacorp.mindbug.model.effect.impl.GainEffect;
 import org.metacorp.mindbug.model.player.Player;
 import org.metacorp.mindbug.service.PlayerService;
-import org.metacorp.mindbug.utils.MindbugGameTest;
+import org.metacorp.mindbug.service.game.StartService;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -20,7 +19,7 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
-public class SimultaneousChoiceTest extends MindbugGameTest {
+public class SimultaneousChoiceTest {
     private Game game;
     private Player currentPlayer;
     private Player opponent;
@@ -29,14 +28,14 @@ public class SimultaneousChoiceTest extends MindbugGameTest {
     @BeforeEach
     public void initGame() {
         PlayerService playerService = new PlayerService();
-        game = startGame(new Player(playerService.createPlayer("Player1")), new Player(playerService.createPlayer("Player2")));
+        game = StartService.newGame(new Player(playerService.createPlayer("Player1")), new Player(playerService.createPlayer("Player2")));
         currentPlayer = game.getCurrentPlayer();
-        opponent = currentPlayer.getOpponent(game.getPlayers());
+        opponent = game.getOpponents().getFirst();
         timing = EffectTiming.PLAY;
     }
 
     @Test
-    public void testResolve() throws GameStateException {
+    public void testResolve() {
         GainEffect attackEffect = new GainEffect();
         CardInstance attackCard = currentPlayer.getHand().removeFirst();
         attackCard.getCard().getEffects().put(EffectTiming.DEFEATED, List.of(attackEffect));
@@ -47,10 +46,10 @@ public class SimultaneousChoiceTest extends MindbugGameTest {
         defendingCard.getCard().getEffects().put(EffectTiming.DEFEATED, List.of(defendEffect));
         opponent.getDiscardPile().add(defendingCard);
 
-        SimultaneousEffectsChoice choice = new SimultaneousEffectsChoice(new HashSet<>(Arrays.asList(
+        SimultaneousEffectsChoice choice = new SimultaneousEffectsChoice(currentPlayer, new HashSet<>(Arrays.asList(
                 new EffectsToApply(Collections.singletonList(attackEffect), attackCard, timing),
                 new EffectsToApply(Collections.singletonList(defendEffect), defendingCard, timing)
-        )), game.getCurrentPlayer());
+        )));
         game.setChoice(choice);
 
         choice.resolve(attackCard.getUuid(), game);
@@ -58,7 +57,7 @@ public class SimultaneousChoiceTest extends MindbugGameTest {
         assertNull(game.getChoice());
         assertEquals(2, game.getEffectQueue().size());
 
-        assertEquals(attackCard, game.getEffectQueue().get(0).getCard());
+        assertEquals(attackCard, game.getEffectQueue().getFirst().getCard());
         assertEquals(defendingCard, game.getEffectQueue().get(1).getCard());
     }
 }
